# rust-wasm-recipes

./: Cargo.toml  README.md  index.html
1.简单调用一个add/: index.html
4.rust返回json给js/: Cargo.toml  README.md  index.html
4.rust返回json给js/src/: lib.rs
7.rust自执行Dom操作/: Cargo.toml  README.md  index.html
7.rust自执行Dom操作/src/: lib.rs
8.rust自执行Dom操作 copy/: Cargo.toml  README.md  index.html
8.rust自执行Dom操作 copy/src/: lib.rs
8.rust自执行定时器&闭包计数&jsArray/: README.md
