[package]
name = "lp-demo-rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }

[lib]
crate-type = ["cdylib"]
